# rat-trig-rs

./: .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  IFLOW.md  README.md  deny.toml  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml  ci.yml  llvm-cov.yml
benches/: bench_main.rs
examples/: basic_usage.rs  line_operations.rs  triangle_analysis.rs
src/: const_trigonom.rs  error.rs  geometry.rs  lib.rs  logging.rs  trigonom.rs  validation.rs
tests/: integration.rs
