[package]
name = "rat-trig-rs"
version = "0.1.1"
edition = "2021"
rust-version = "1.70.0"
description = "Rational Trigometry in Rust"
repository = "https://github.com/luk036/rat-trig-rs"
license = "MIT OR Apache-2.0"
categories = ["mathematics", "science"]
keywords = ["trigonometry", "rational", "geometry", "math"]

[features]
default = []
std = ["num-traits/std"]
serde = ["dep:serde", "serde/derive"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
fractions-rs = "0.1.2"
num-rational = "0.4.2"
quickcheck = "1.1.0"
quickcheck_macros = "1.0.0"
criterion = "0.5"
proptest = "1.5"

[dependencies]
num-traits = { version = "0.2.19", default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }

[[bench]]
name = "bench_main"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
