[package]
name = "rat-trig-rs"
version = "0.1.2"
edition = "2021"
rust-version = "1.70.0"
description = "Rational Trigometry in Rust"
repository = "https://github.com/luk036/rat-trig-rs"
license = "MIT OR Apache-2.0"
categories = ["mathematics", "science"]
keywords = ["trigonometry", "rational", "geometry", "math"]

[features]
default = []
std = ["num-traits/std", "dep:log"]
serde = ["dep:serde", "serde/derive"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "src/doc-header.html"]

[dev-dependencies]
num-rational = "0.4.2"

[dependencies]
num-traits = { version = "0.2.19", default-features = false }
log = { version = "0.4.32", optional = true }
serde = { version = "1.0.228", optional = true, features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
